<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Log in Screen -->
    <string name="welcome">Hello there, \nwelcome back!</string>
    <string name="sign_in_message">Sign in to continue</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_hint">example@example.com</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_user_sign_up_now">New User? Sign Up Now</string>

    <!-- Welcome / On boarding Screen -->
    <string name="welcome_back">Welcome Back,</string>
    <string name="welcome_user">%s</string>
    <string name="welcome_message">Enjoy \nManaging\nUR Store!</string>
    <string name="read_instructions">Read Instructions</string>
    <string name="shaima">Shaima</string>

    <!-- Instructions Screen -->
    <string name="instructions_title">How to use the app?</string>
    <string name="instructions_body">Use the \"Add\" button to add new shoes to the inventory.</string>
    <string name="start">Start</string>

    <!-- List Screen -->
    <string name="logout">Logout</string>

    <!-- Shoe Item -->
    <string name="shoes_name">Name: %s</string>
    <string name="shoes_size">Size: %s</string>
    <string name="shoes_company">Brand: %s</string>
    <string name="shoes_description">Description: %s</string>
    <string name="shoes_gallery">Gallery:</string>

    <!-- Details Screen -->
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="size">Size:</string>
    <string name="details_name">Name:</string>
    <string name="details_company">Brand:</string>
    <string name="details_description">Description:</string>
    <string name="name_hint">enter shoes name</string>
    <string name="size_hint">enter shoes size</string>
    <string name="company_hint">enter shoes brand</string>
    <string name="desc_hint">enter shoes details</string>

</resources>
